Global Standards Homepage Launch

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>EntityWorks — AI Perception & AI Discoverability</title>
+  <title>EntityWorks — EntityWorks Standard for AI Perception</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex, nofollow">
   <meta name="description"
-        content="EntityWorks formalises the disciplines of AI Perception and AI Discoverability and created the EntityWorks Discoverability Index™ to structure visibility in the AI era.">
+        content="EntityWorks publishes a formal, fully defined standard for AI Perception and machine-interpretation stability.">
   <link rel="canonical" href="https://entityworks.ai/">
 
   <!-- Favicon -->
@@ -36,7 +36,7 @@
       background: #ffffff;
     }
 
-    /* Global site header / nav (matches other pages) */
+    /* Global site header / nav */
     .site-header {
       border-bottom: 1px solid var(--ew-border);
       background: #ffffff;
@@ -85,41 +85,50 @@
       padding: 0 1rem 3rem;
     }
 
-    /* Hero block */
+    /* Hero */
     .hero {
-      max-width: 36rem;
+      max-width: 40rem;
       margin: 3rem auto 3.5rem auto;
     }
 
     .hero-mission {
-      font-size: 1.35rem;
-      line-height: 1.55;
-      font-weight: 500;
+      font-size: 1.4rem;
+      line-height: 1.6;
+      font-weight: 600;
       letter-spacing: 0.01em;
-      color: #111;
-      text-align: left;
-      margin: 0;
+      margin: 0 0 1rem 0;
+    }
+
+    .hero-sub {
+      margin: 0 0 1.5rem 0;
+    }
+
+    .hero-links a {
+      margin-right: 1.5rem;
+      text-decoration: none;
+      color: var(--ew-accent);
+      font-weight: 500;
+    }
+
+    .hero-links a:hover,
+    .hero-links a:focus {
+      text-decoration: underline;
     }
 
     h2 {
-      margin-top: 1.75rem;
-      margin-bottom: 0.5rem;
+      margin-top: 2.5rem;
+      margin-bottom: 0.75rem;
+      font-size: 1.15rem;
     }
 
-    ul {
-      margin: 0.5rem 0 1rem 1.2rem;
-      padding: 0;
+    h3 {
+      margin-top: 1.5rem;
+      margin-bottom: 0.25rem;
+      font-size: 1.05rem;
     }
 
-    li {
-      margin: 0.25rem 0;
-    }
-
-    .highlight {
-      padding: 0.75rem 1rem;
-      border-left: 3px solid #0057ff;
-      background: #f5f7ff;
-      margin: 1.5rem 0;
+    p {
+      margin: 0 0 0.75rem 0;
     }
 
     .last-updated {
@@ -135,19 +144,14 @@
   {
     "@context": "https://schema.org",
     "@type": "WebPage",
-    "name": "EntityWorks — AI Perception & AI Discoverability",
-    "description": "EntityWorks formalises the disciplines of AI Perception and AI Discoverability and created the EntityWorks Discoverability Index™ to structure visibility in the AI era.",
+    "name": "EntityWorks — EntityWorks Standard for AI Perception",
+    "description": "EntityWorks publishes a formal, fully defined standard for AI Perception and machine-interpretation stability.",
     "url": "https://entityworks.ai/",
     "about": [
       {
         "@type": "Thing",
         "name": "AI Perception",
         "description": "AI Perception is the discipline concerned with how AI systems form, update, and express their understanding of people, organisations, relationships, and ideas."
-      },
-      {
-        "@type": "Thing",
-        "name": "AI Discoverability",
-        "description": "AI Discoverability is the discipline of ensuring that AI systems can correctly identify, understand, and represent people, organisations, and ideas."
       }
     ],
     "publisher": {
@@ -164,149 +168,87 @@
     <div class="nav-inner">
       <a href="/index.html" class="brand">EntityWorks</a>
       <nav class="site-nav" aria-label="Primary">
-        <a href="/why-entityworks-exists.html">Why EntityWorks</a>
-        <a href="/ai-discoverability-resources.html">AI Discoverability</a>
-        <a href="/how-we-score-the-edi.html">EDI</a>
+        <a href="/the-standard.html">The Standard</a>
         <a href="/ai-perception.html">AI Perception</a>
+        <a href="/regulators/">For Regulators</a>
+        <a href="/publications.html">Publications</a>
       </nav>
     </div>
   </header>
 
   <main>
+    <!-- SECTION 1 — HERO -->
     <header class="hero">
       <p class="hero-mission">
-        EntityWorks exists to formalise the discipline of AI Perception and to build
-        the structures AI systems will increasingly rely on to understand the world.
+        EntityWorks publishes a formal, fully defined standard for AI Perception and machine-interpretation stability.
+      </p>
+      <p class="hero-sub">
+        This standard is a complete reference framework, incorporating formal definitions, structured ontology, diagnostic criteria, accreditation rules, and machine-readable specifications — forming the established basis for our approach to how AI systems interpret people, organisations, relationships, and ideas.
+      </p>
+      <p class="hero-links">
+        <a href="/the-standard.html">The Standard →</a>
+        <a href="/ai-perception.html">AI Perception →</a>
+        <a href="/regulators/">For Regulators →</a>
+        <a href="/publications.html">Publications →</a>
       </p>
     </header>
 
-    <!-- ⭐ NEW SECTION BELOW HERO -->
+    <!-- SECTION 2 — THE STANDARD -->
     <section>
-      <h2>What EntityWorks Does</h2>
+      <h2>The Standard</h2>
       <p>
-        EntityWorks ensures that AI systems understand people, organisations, relationships, and ideas correctly. We formalise the discipline that governs AI’s interpretation of the world and create the frameworks that keep that understanding accurate, stable, and trustworthy as AI systems evolve.
+        EntityWorks publishes and maintains the EntityWorks Standard: a formal, fully defined framework governing the discipline of AI Perception and machine-interpretation stability.
       </p>
+      <p>
+        The standard defines a coherent framework for how AI systems model, update, and express their understanding of people, organisations, relationships, and ideas.
+      </p>
+      <p>
+        It is delivered as a fully versioned body of work, supported by formal definitions, diagnostic criteria, accreditation rules, and machine-readable specifications.
+      </p>
+      <p><a href="/the-standard.html">Explore The Standard →</a></p>
     </section>
 
-    <!-- INTRO / ORIGIN -->
+    <!-- SECTION 3 — SELECT A PATH -->
     <section>
-      <h2>2025 - The Birth of the AI-Native Company</h2>
-      <p>
-        As EntityWorks examined how AI systems form their understanding of people, organisations, relationships and ideas,
-        it became clear that the area commonly referred to as “AI discoverability” had not been formalised into a defined
-        discipline. The term was being used informally, without agreed principles, structure, or a coherent framework.
-        From our exploratory work in this unstructured space, we began to understand that there was a clear and pressing
-        need for reliable, consistent and standardised AI interpretation. EntityWorks was established to formalise this area,
-        to clarify its underlying principles, and to build the perceptual structures that modern AI systems will rely on going
-        forward.
-      </p>
+      <h2>Select a path</h2>
+      <p>Navigate directly to the aspect of the EntityWorks Standard that best matches your role and requirements.</p>
+
+      <h3>The Standard</h3>
+      <p>The complete, published framework defining AI Perception and machine-interpretation stability within the EntityWorks Standard.</p>
+      <p><a href="/the-standard.html">View The Standard →</a></p>
+
+      <h3>AI Perception</h3>
+      <p>The discipline as defined in the EntityWorks Standard, including its conceptual scope, ontology, and representational dimensions.</p>
+      <p><a href="/ai-perception.html">Explore AI Perception →</a></p>
+
+      <h3>For Regulators</h3>
+      <p>Guidance for regulatory bodies on adopting, referencing, and using the EntityWorks Standard within governance and audit contexts.</p>
+      <p><a href="/regulators/">Regulator Materials →</a></p>
+
+      <h3>Assessments &amp; Alignment</h3>
+      <p>Institutional assessments and alignment requests relating to the EntityWorks Standard, including diagnostic evaluation using the EntityWorks Discoverability Index (EDI).</p>
+      <p><a href="mailto:hello@entityworks.ai?subject=EntityWorks%20Standard%20Assessment%20Enquiry">Request Assessment →</a></p>
     </section>
 
-    <!-- AI PERCEPTION -->
+    <!-- SECTION 4 — PUBLICATIONS -->
     <section>
-      <h2>AI Perception: How AI Systems Understand the World</h2>
-
-      <p>
-        <strong>AI Perception is the discipline concerned with how AI systems form, update, and express their understanding of people, organisations, relationships, and ideas.</strong>
-      </p>
-
-      <p>
-        As AI systems move from simple document retrieval towards richer, entity-level interpretation, perception becomes
-        the layer that determines how people, organisations, products and relationships are represented inside models. It
-        shapes which attributes are noticed, how context is applied, and how meaning is carried across different systems
-        and updates.
-      </p>
-
-      <p>
-        EntityWorks works on AI Perception as a structural discipline — clarifying the concepts, language and frameworks
-        that help AI systems form more stable and accurate understandings over time.
-      </p>
+      <h2>Publications</h2>
+      <p>The official papers that document and extend the EntityWorks Standard.</p>
+      <p><a href="/publications.html">View Publications →</a></p>
     </section>
-
-    <!-- AI DISCOVERABILITY -->
-    <section>
-      <h2>AI Discoverability: Making Entities Legible to AI Systems</h2>
-
-      <p>
-        <strong>AI Discoverability is the discipline of ensuring that AI systems can correctly identify, understand, and represent people, organisations, relationships, and ideas.</strong>
-      </p>
-
-      <p>
-        It focuses on the practical conditions that make entities legible to AI systems: clarity, consistency, structure
-        and alignment across signals and sources. When these elements are in place, models have a clearer basis for
-        forming and expressing their view of an entity.
-      </p>
-
-      <p>
-        The <strong><a href="/discoverability-index.html">EntityWorks Discoverability Index™ (EDI)</a></strong> translates
-        these principles into a measurable assessment. It provides a structured way to review how AI systems currently
-        interpret an entity and to highlight where its AI-facing representation could be strengthened.
-      </p>
-    </section>
-
-    <!-- WHERE ENTITYWORKS FITS IN -->
-    <section>
-      <h2>Where EntityWorks Fits In</h2>
-
-      <p>
-        EntityWorks focuses on the point where these two disciplines meet in practice. The work includes:
-      </p>
-
-      <ul>
-        <li>clarifying the principles of AI Perception</li>
-        <li>formalising the applied discipline of AI Discoverability</li>
-        <li>developing the EntityWorks Discoverability Index™</li>
-        <li>introducing the Entity Understanding Layer™</li>
-        <li>publishing machine-readable frameworks, language and examples</li>
-      </ul>
-
-      <p>
-        EntityWorks was conceived, built, and operates as an AI-native organisation — designed with machine comprehension
-        in mind from the outset, and with human interpretation built on top of that foundation.
-      </p>
-    </section>
-
-    <!-- EXPLORE OUR WORK -->
-    <section>
-      <h2>Explore Our Work</h2>
-      <p>You can explore more of this work here:</p>
-
-      <ul>
-        <li><a href="/category-creation-declaration.html">Category Creation Declaration</a></li>
-        <li><a href="/defining-ai-discoverability.html">AI Discoverability: Formalising the Discipline</a></li>
-        <li><a href="/position-on-ai-discoverability.html">EntityWorks Position on AI Discoverability</a></li>
-        <li><a href="/discoverability-index.html">EntityWorks Discoverability Index™</a></li>
-        <li><a href="/entity-understanding-layer.html">Entity Understanding Layer™</a></li>
-        <li><a href="/lexicon.html">EntityWorks Lexicon</a></li>
-      </ul>
-    </section>
-
-    <!-- EDI PRE-ASSESSMENT -->
-    <section>
-      <h2>Start an EDI Pre-Assessment</h2>
-      <p>
-        If your organisation depends on being correctly understood when people ask AI systems about it, you can begin with
-        an EDI pre-assessment.
-      </p>
-      <p>
-        Email <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a> and we’ll review your current AI
-        Discoverability position and outline recommended next steps.
-      </p>
-    </section>
-
   </main>
 
   <p class="last-updated">
     Last updated: November 2025
   </p>
 
-<div id="footer"></div>
-<script>
-  fetch("/footer-home.html")
-    .then((response) => response.text())
-    .then((data) => {
-      document.getElementById("footer").innerHTML = data;
-    });
-</script>
+  <div id="footer"></div>
+  <script>
+    fetch("/footer-home.html")
+      .then((response) => response.text())
+      .then((data) => {
+        document.getElementById("footer").innerHTML = data;
+      });
+  </script>
 </body>
 </html>
